--- a/Evolution/WindowConfiguration5.cnf
+++ b/Evolution/WindowConfiguration5.cnf
@@ -1,9 +1,9 @@
-MoveWindow IDM_HIST_WINDOW 3840 2056 2560 30
+MoveWindow IDM_HIST_WINDOW 3850 2064 2560 30
 ShowWindow IDM_HIST_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 3840 1111 2560 945
+MoveWindow IDM_MAIN_WINDOW 3850 1119 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 3832 1060 2576 1056
-ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_APPL_WINDOW 3842 1068 2576 1056
+ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DISP_WINDOW 6137 1272 211 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6142 1494 211 559
@@ -14,7 +14,7 @@ MoveWindow IDM_STAT_WINDOW 3834 1621 400 430
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 3860 600 300 150
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 6131 1126 216 139
+MoveWindow IDM_MINI_WINDOW 6062 1111 216 139
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_STATUS_BAR 3840 2086 2560 22
+MoveWindow IDM_STATUS_BAR 3850 2094 2560 22
 ShowWindow IDM_STATUS_BAR SW_SHOWNORMAL
