--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -7,9 +7,6 @@
 #include <richedit.h>
 #include "resource.h"
 
-
-
-
 //
 // Menu resources
 //
@@ -142,16 +139,18 @@ STRINGTABLE
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 IDC_EVOLUTION_MAIN ACCELERATORS
 {
-    "?",            IDM_ABOUT, ASCII, ALT
-    "/",            IDM_ABOUT, ASCII, ALT
-    "g",            IDM_GENERATION, ASCII
-    "r",            IDM_RUN, ASCII
-    "s",            IDM_STOP, ASCII
-    "+",            IDM_ZOOM_IN, ASCII
-    "-",            IDM_ZOOM_OUT, ASCII
+    "g",            IDM_GENERATION,  ASCII
+    "r",            IDM_RUN,         ASCII
+    "s",            IDM_STOP,        ASCII
+    "+",            IDM_ZOOM_IN,     ASCII
+    "-",            IDM_ZOOM_OUT,    ASCII
     "w",            IDM_MINI_WINDOW, ASCII
-    "b",            IDM_BACKWARDS, ASCII
-    VK_ESCAPE,      IDM_ESCAPE, VIRTKEY
+    "b",            IDM_BACKWARDS,   ASCII
+    "z",            IDM_BACKWARDS,   VIRTKEY, CONTROL
+    "y",            IDM_GENERATION,  VIRTKEY, CONTROL
+    VK_BACK,        IDM_BACKWARDS,   VIRTKEY, ALT
+    "?",            IDM_ABOUT,       ASCII, ALT
+    "/",            IDM_ABOUT,       ASCII, ALT
     "m",            IDM_MINI_WINDOW, ASCII, ALT
     "d",            IDM_DISP_WINDOW, ASCII, ALT
     "e",            IDM_EDIT_WINDOW, ASCII, ALT
@@ -159,6 +158,7 @@ IDC_EVOLUTION_MAIN ACCELERATORS
     "h",            IDM_HIST_WINDOW, ASCII, ALT
     "c",            IDM_CRSR_WINDOW, ASCII, ALT
     "p",            IDM_PERF_WINDOW, ASCII, ALT
+    VK_ESCAPE,      IDM_ESCAPE, VIRTKEY
 }
 
 
