--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -176,7 +176,6 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="strategy.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="trace.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="config.cpp" />
@@ -205,9 +204,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="strategy.cpp" />
-    <ClCompile Include="trace.cpp" />
-    <ClCompile Include="wrapperHelpers.cpp" />
-    <ClCompile Include="wrappers.cpp" />
+    <ClCompile Include="EvolutionCoreWrapperHelpers.cpp" />
+    <ClCompile Include="EvolutionCoreWrappers.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
