--- a/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
+++ b/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
@@ -46,5 +46,8 @@
     <ClInclude Include="EvolutionCoreWrappers.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="dump.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
