--- a/Evolution/Evolution.vcxproj.filters
+++ b/Evolution/Evolution.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="Version.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="win32_scriptHook.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
