--- a/EvoWindows/EvoWindows.vcxproj
+++ b/EvoWindows/EvoWindows.vcxproj
@@ -20,9 +20,9 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{73C1D72A-48DC-4A70-960C-B09D1B55C920}</ProjectGuid>
+    <ProjectGuid>{8830DA2B-C953-4702-A9E7-3BCE05366F1B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>EvoHistGlue</RootNamespace>
+    <RootNamespace>EvoWindows</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.15063.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -71,30 +71,30 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>$(SolutionDir)Evolution;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
-    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoHistGlue;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Direct3D;$(SolutionDir)Win32_history;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>$(SolutionDir)Evolution;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
-    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoHistGlue;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Direct3D;$(SolutionDir)Win32_history;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)Evolution;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
-    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoHistGlue;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Direct3D;$(SolutionDir)Win32_history;C:\Programme\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(SolutionDir)Evolution;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
-    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <IncludePath>$(SolutionDir)Utilities;$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoHistGlue;$(SolutionDir)HistoryInterface;$(SolutionDir)win32_utilities;$(SolutionDir)Direct3D;$(SolutionDir)Win32_history;C:\Programme\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
-      <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <Optimization>MaxSpeed</Optimization>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -103,6 +103,17 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ClCompile>
+    <Link>
+      <SubSystem>Windows</SubSystem>
+    </Link>
+  </ItemDefinitionGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <ClCompile>
+      <PrecompiledHeader>Use</PrecompiledHeader>
+      <WarningLevel>Level3</WarningLevel>
+      <Optimization>Disabled</Optimization>
+      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -123,42 +134,57 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <ClCompile>
-      <WarningLevel>Level3</WarningLevel>
-      <PrecompiledHeader>Use</PrecompiledHeader>
-      <Optimization>MaxSpeed</Optimization>
-      <FunctionLevelLinking>true</FunctionLevelLinking>
-      <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-    </ClCompile>
-    <Link>
-      <SubSystem>Windows</SubSystem>
-      <EnableCOMDATFolding>true</EnableCOMDATFolding>
-      <OptimizeReferences>true</OptimizeReferences>
-    </Link>
-  </ItemDefinitionGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EvoGenerationCmd.h" />
-    <ClInclude Include="EvoHistorySys.h" />
-    <ClInclude Include="EvoModelData.h" />
-    <ClInclude Include="EvoModelFactory.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClInclude Include="targetver.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="EvoGenerationCmd.cpp" />
-    <ClCompile Include="EvoHistorySys.cpp" />
-    <ClCompile Include="EvoModelData.cpp" />
+    <ClCompile Include="EvoController.cpp" />
     <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="win32_aboutBox.cpp" />
+    <ClCompile Include="win32_crsrWindow.cpp" />
+    <ClCompile Include="win32_displayOptions.cpp" />
+    <ClCompile Include="win32_draw.cpp" />
+    <ClCompile Include="win32_editor.cpp" />
+    <ClCompile Include="win32_editorWrappers.cpp" />
+    <ClCompile Include="win32_evoHistWindow.cpp" />
+    <ClCompile Include="win32_focusPoint.cpp" />
+    <ClCompile Include="win32_frameBuffer.cpp" />
+    <ClCompile Include="win32_gridWindow.cpp" />
+    <ClCompile Include="win32_histWorkerThread.cpp" />
+    <ClCompile Include="win32_histWrappers.cpp" />
+    <ClCompile Include="win32_statistics.cpp" />
+    <ClCompile Include="win32_status.cpp" />
+    <ClCompile Include="win32_worker_thread.cpp" />
+    <ClCompile Include="win32_wrappers.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="EvoController.h" />
+    <ClInclude Include="Resource.h" />
+    <ClInclude Include="stdafx.h" />
+    <ClInclude Include="targetver.h" />
+    <ClInclude Include="Version.h" />
+    <ClInclude Include="win32_aboutBox.h" />
+    <ClInclude Include="win32_crsrWindow.h" />
+    <ClInclude Include="win32_displayOptions.h" />
+    <ClInclude Include="win32_draw.h" />
+    <ClInclude Include="win32_editor.h" />
+    <ClInclude Include="win32_editorWrappers.h" />
+    <ClInclude Include="win32_evoHistWindow.h" />
+    <ClInclude Include="win32_focusPoint.h" />
+    <ClInclude Include="win32_frameBuffer.h" />
+    <ClInclude Include="win32_gridWindow.h" />
+    <ClInclude Include="win32_histWorkerThread.h" />
+    <ClInclude Include="win32_histWrappers.h" />
+    <ClInclude Include="win32_scriptHook.h" />
+    <ClInclude Include="win32_statistics.h" />
+    <ClInclude Include="win32_status.h" />
+    <ClInclude Include="win32_worker_thread.h" />
+    <ClInclude Include="win32_wrappers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
