--- a/Evolution/Evolution.vcxproj
+++ b/Evolution/Evolution.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvoWindows;$(SolutionDir)runtimeCPP;C:\Program Files\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\Debug;C:\Programme\Microsoft DirectX SDK (June 2010)\Lib\x86;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;$(LibraryPath)</LibraryPath>
     <CustomBuildAfterTargets>BuildCompile</CustomBuildAfterTargets>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
@@ -81,7 +81,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)runtimeCPP;C:\Programme\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvoWindows;$(SolutionDir)runtimeCPP;C:\Programme\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\x64\Debug;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64;$(LibraryPath)</LibraryPath>
     <CustomBuildAfterTargets>
     </CustomBuildAfterTargets>
@@ -91,7 +91,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvoWindows;$(SolutionDir)runtimeCPP;C:\Program Files\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\Release;C:\Programme\Microsoft DirectX SDK (June 2010)\Lib\x86;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;$(LibraryPath)</LibraryPath>
     <CustomBuildAfterTargets>BuildCompile</CustomBuildAfterTargets>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
@@ -100,7 +100,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)runtimeCPP;C:\Programme\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)EvoWindows;$(SolutionDir)runtimeCPP;C:\Programme\Microsoft DirectX SDK (June 2010)\Include;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\x64\Release;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(LibraryPath)</LibraryPath>
     <CustomBuildAfterTargets>
     </CustomBuildAfterTargets>
@@ -121,7 +121,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9d.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9d.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;EvoWindows.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>
@@ -145,7 +145,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9d.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9d.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;EvoWindows.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>
@@ -173,7 +173,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;EvoWindows.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>
@@ -201,7 +201,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;EvoWindows.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>
@@ -216,33 +216,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EvoController.h" />
     <ClInclude Include="Evolution.h" />
-    <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Version.h" />
-    <ClInclude Include="win32_aboutBox.h" />
     <ClInclude Include="win32_appWindow.h" />
-    <ClInclude Include="win32_crsrWindow.h" />
-    <ClInclude Include="win32_displayOptions.h" />
-    <ClInclude Include="win32_draw.h" />
-    <ClInclude Include="win32_editor.h" />
-    <ClInclude Include="win32_editorWrappers.h" />
-    <ClInclude Include="win32_evoHistWindow.h" />
-    <ClInclude Include="win32_frameBuffer.h" />
-    <ClInclude Include="win32_gridWindow.h" />
-    <ClInclude Include="win32_focusPoint.h" />
-    <ClInclude Include="win32_histWorkerThread.h" />
-    <ClInclude Include="win32_histWrappers.h" />
-    <ClInclude Include="win32_scriptHook.h" />
-    <ClInclude Include="win32_statistics.h" />
-    <ClInclude Include="win32_status.h" />
-    <ClInclude Include="win32_worker_thread.h" />
-    <ClInclude Include="win32_wrappers.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="EvoController.cpp" />
     <ClCompile Include="Evolution.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -250,23 +230,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="win32_aboutBox.cpp" />
     <ClCompile Include="win32_appWindow.cpp" />
-    <ClCompile Include="win32_crsrWindow.cpp" />
-    <ClCompile Include="win32_displayOptions.cpp" />
-    <ClCompile Include="win32_draw.cpp" />
-    <ClCompile Include="win32_editor.cpp" />
-    <ClCompile Include="win32_editorWrappers.cpp" />
-    <ClCompile Include="win32_evoHistWindow.cpp" />
-    <ClCompile Include="win32_focusPoint.cpp" />
-    <ClCompile Include="win32_frameBuffer.cpp" />
-    <ClCompile Include="win32_gridWindow.cpp" />
-    <ClCompile Include="win32_histWorkerThread.cpp" />
-    <ClCompile Include="win32_histWrappers.cpp" />
-    <ClCompile Include="win32_statistics.cpp" />
-    <ClCompile Include="win32_status.cpp" />
-    <ClCompile Include="win32_worker_thread.cpp" />
-    <ClCompile Include="win32_wrappers.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Evolution.rc" />
