--- a/EvolutionConsole/EvolutionConsole.vcxproj
+++ b/EvolutionConsole/EvolutionConsole.vcxproj
@@ -73,25 +73,25 @@
     <LinkIncremental>true</LinkIncremental>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <LibraryPath>$(SolutionDir)\Debug;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)Evolution;$(SolutionDir)EvoHistGlue;$(SolutionDir)Utilities;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
     <LibraryPath>$(SolutionDir)\x64\Debug;$(LibraryPath)</LibraryPath>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)Evolution;$(SolutionDir)EvoHistGlue;$(SolutionDir)Utilities;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <LibraryPath>$(SolutionDir)\Release;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)Evolution;$(SolutionDir)EvoHistGlue;$(SolutionDir)Utilities;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
     <LibraryPath>$(SolutionDir)\x64\Release;$(LibraryPath)</LibraryPath>
     <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)runtimeCPP;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)EvoWindows;$(SolutionDir)Evolution;$(SolutionDir)EvoHistGlue;$(SolutionDir)Utilities;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -104,7 +104,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>EvolutionCore.lib;Utilities.lib;runtimeCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;Win32_utilities.lib;Win32_history.lib;EvoHistGlue.lib;EvoWindows.lib;EvolutionCore.lib;History.lib;Utilities.lib;runtimeCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -118,7 +118,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>EvolutionCore.lib;Utilities.lib;runtimeCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;Win32_utilities.lib;Win32_history.lib;EvoHistGlue.lib;EvoWindows.lib;EvolutionCore.lib;History.lib;Utilities.lib;runtimeCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -136,7 +136,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>EvolutionCore.lib;Utilities.lib;runtimeCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;Win32_utilities.lib;Win32_history.lib;EvoHistGlue.lib;EvoWindows.lib;EvolutionCore.lib;History.lib;Utilities.lib;runtimeCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -154,7 +154,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>EvolutionCore.lib;Utilities.lib;runtimeCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;Win32_utilities.lib;Win32_history.lib;EvoHistGlue.lib;EvoWindows.lib;EvolutionCore.lib;History.lib;Utilities.lib;runtimeCPP.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
