--- a/Tests/std_configuration.in
+++ b/Tests/std_configuration.in
@@ -1,1 +1,11 @@
 SetConfigValue Config::tId::moveEnabled 0
+SetConfigValue Config::tId::marryEnabled 0
+SetConfigValue Config::tId::fertilizeEnabled 0
+SetConfigValue Config::tId::eatEnabled 0
+SetConfigValue Config::tId::energyConsumptionBasicRate 0
+SetConfigValue Config::tId::interactionPayOff_R  100
+SetConfigValue Config::tId::interactionPayOff_S -300
+SetConfigValue Config::tId::interactionPayOff_T  300
+SetConfigValue Config::tId::interactionPayOff_P    0
+# SetConfigValue Config::tId::nrOfHistorySlots 10
+# test
