History packs GridPoint in 16 Bit. Avoids problems with separate commands for x and y coordinates, e.g. Bug with editor replay mode. Consequence: Grid area size restricted to 255 by 255.

--- a/Evolution/WindowConfiguration5.cnf
+++ b/Evolution/WindowConfiguration5.cnf
@@ -5,7 +5,7 @@ ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_DISP_WINDOW 5969 1834 211 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6177 1493 211 559
-ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_EDIT_WINDOW SW_HIDE
 MoveWindow IDM_CRSR_WINDOW 3930 1407 300 150
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_STAT_WINDOW 3835 1601 400 430
