--- a/HistoryInterface/HistoryInterface.vcxproj.filters
+++ b/HistoryInterface/HistoryInterface.vcxproj.filters
@@ -22,5 +22,8 @@
     <ClInclude Include="ModelData.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="GenerationCmd.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
