some refactorings and work on Hexagon mode. Better, but not complete.

--- a/Tests/std_script.in
+++ b/Tests/std_script.in
@@ -1,6 +1,3 @@
-SetBrushSize 6
-SetBrushIntensity 16
-SetBrushStrategy tBrushMode::randomStrategy
-ModelDoEdit   70  49 
-Compute
-DumpGridPointList
+SetFieldSize 1000 0 0
+Pixel2GridPos 289 1
+
