Some cleanups, bug fixes, scripting improved

--- a/Evolution/WindowConfiguration4.cnf
+++ b/Evolution/WindowConfiguration4.cnf
@@ -5,12 +5,12 @@ ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_DISP_WINDOW 6176 1313 211 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6180 1537 211 559
-ShowWindow IDM_EDIT_WINDOW SW_HIDE
-MoveWindow IDM_CRSR_WINDOW 3860 1382 300 150
+ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_CRSR_WINDOW 3872 1355 300 150
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_STAT_WINDOW 3848 1566 400 430
+MoveWindow IDM_STAT_WINDOW 3873 1537 400 430
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 3860 1200 300 130
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_PERF_WINDOW 3881 1179 300 130
+ShowWindow IDM_PERF_WINDOW SW_HIDE
 MoveWindow IDM_MINI_WINDOW 6029 1119 362 239
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
