Refactoring. PixelCore introduced

--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -196,6 +196,7 @@
     <ClCompile Include="grid_model.cpp" />
     <ClCompile Include="individual.cpp" />
     <ClCompile Include="interaction.cpp" />
+    <ClCompile Include="PixelCore.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
