Refactoring, work on test scripts, EvolutionConsole accepts PostXXX input

--- a/EvoWindows/EvoWindows.vcxproj.filters
+++ b/EvoWindows/EvoWindows.vcxproj.filters
@@ -66,7 +66,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="EvoController.cpp">
+    <ClCompile Include="win32_evoController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -128,7 +128,7 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="EvoController.h">
+    <ClInclude Include="win32_evoController.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
