--- a/EvolutionConsole/Test/std_configuration.in
+++ b/EvolutionConsole/Test/std_configuration.in
@@ -7,5 +7,5 @@ SetConfigValue Config::tId::interactionPayOff_R  100
 SetConfigValue Config::tId::interactionPayOff_S -300
 SetConfigValue Config::tId::interactionPayOff_T  300
 SetConfigValue Config::tId::interactionPayOff_P    0
-# SetConfigValue Config::tId::nrOfHistorySlots 10
+SetConfigValue Config::tId::nrOfHistorySlots 10
 # test
