Cleanup, HistAllocThread with contructor/destructor

--- a/History/History.vcxproj
+++ b/History/History.vcxproj
@@ -158,6 +158,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="genCmdList.h" />
+    <ClInclude Include="HistCacheItem.h" />
     <ClInclude Include="historyCache.h" />
     <ClInclude Include="HistorySystemImpl.h" />
     <ClInclude Include="hist_slot.h" />
