--- a/History/History.vcxproj.filters
+++ b/History/History.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="HistorySystemImpl.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="HistCacheItem.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
