Refactoring. Stuff moved from EvolutionCore to EvolutionModel. Not Stable.

--- a/EvolutionCore/EvolutionCore.vcxproj.filters
+++ b/EvolutionCore/EvolutionCore.vcxproj.filters
@@ -134,5 +134,8 @@
     <ClCompile Include="PixelCore.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="EvolutionModelDataImpl.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
