Editor can delete stuff. Running.

--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -114,10 +114,10 @@ FONT 8, "Ms Shell Dlg"
     AUTORADIOBUTTON "Rectangle", IDM_EDIT_RECTANGLE, 32, 208,  49,  8, 0, WS_EX_LEFT
 
     GROUPBOX        "Size", 100, 18, 233, 100, 35, 0, WS_EX_LEFT
-    CONTROL         "Size", IDM_EDIT_SIZE, TRACKBAR_CLASS, WS_TABSTOP | WS_BORDER | TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS, 23, 244, 64, 14, WS_EX_LEFT
+    CONTROL         "Size", IDM_EDIT_SIZE, TRACKBAR_CLASS, WS_TABSTOP | WS_BORDER | TBS_NOTICKS, 23, 244, 64, 14, WS_EX_LEFT
 
     GROUPBOX        "Intensity", 101, 18, 271, 100, 35, 0, WS_EX_LEFT
-    CONTROL         "Intensity", IDM_EDIT_INTENSITY, TRACKBAR_CLASS, WS_TABSTOP | WS_BORDER | TBS_AUTOTICKS | TBS_BOTH | TBS_NOTICKS, 23, 284, 64, 14, WS_EX_LEFT
+    CONTROL         "Intensity", IDM_EDIT_INTENSITY, TRACKBAR_CLASS, WS_TABSTOP | WS_BORDER | TBS_NOTICKS, 23, 284, 64, 14, WS_EX_LEFT
 }
 
 //
