Refactoring, ASSERT... macros

--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoolOp.h" />
+    <ClInclude Include="debug.h" />
     <ClInclude Include="DisplayFunctor.h" />
     <ClInclude Include="kGridPoint.h" />
     <ClInclude Include="pixelPoint.h" />
