--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="BoolOp.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="DisplayFunctor.h" />
+    <ClInclude Include="Int24.h" />
     <ClInclude Include="kGridPoint.h" />
     <ClInclude Include="Manipulator.h" />
     <ClInclude Include="pixelPoint.h" />
