--- a/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
+++ b/EvolutionCoreInterface/EvolutionCoreInterface.vcxproj.filters
@@ -55,5 +55,8 @@
     <ClInclude Include="gridShape.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="gridPoint24.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
