work on debug macros, save casting. Running.

--- a/Evolution/WindowConfiguration4.cnf
+++ b/Evolution/WindowConfiguration4.cnf
@@ -1,5 +1,5 @@
-MoveWindow IDM_MINI_WINDOW 192 753 -1770577896 0
-ShowWindow IDM_MINI_WINDOW SW_HIDE
+MoveWindow IDM_MINI_WINDOW 5987 1117 416 239
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 3832 1060 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_DISP_WINDOW 6073 1363 181 219
