bug fix: In editor mode move didn't work

--- a/Evolution/WindowConfiguration4.cnf
+++ b/Evolution/WindowConfiguration4.cnf
@@ -5,12 +5,12 @@ ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_DISP_WINDOW 6073 1363 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6068 1584 331 462
-ShowWindow IDM_EDIT_WINDOW SW_HIDE
+ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_CRSR_WINDOW 3872 1355 300 150
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_STAT_WINDOW 3835 1546 400 430
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 3889 1156 300 130
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW 3840 1111 2560 975
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
