--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -180,7 +180,6 @@
   <ItemGroup>
     <ClCompile Include="config.cpp" />
     <ClCompile Include="dump.cpp" />
-    <ClCompile Include="EditorState.cpp" />
     <ClCompile Include="EvolutionCore.cpp" />
     <ClCompile Include="EvolutionCoreImpl.cpp" />
     <ClCompile Include="EvolutionModelData.cpp" />
@@ -188,11 +187,11 @@
     <ClCompile Include="EvolutionTypes.cpp" />
     <ClCompile Include="food.cpp" />
     <ClCompile Include="geneTypeLimits.cpp" />
+    <ClCompile Include="gridBrush.cpp" />
     <ClCompile Include="pixelCoordinates.cpp" />
     <ClCompile Include="gene.cpp" />
     <ClCompile Include="genome.cpp" />
     <ClCompile Include="gpList.cpp" />
-    <ClCompile Include="gridCircle.cpp" />
     <ClCompile Include="gridField.cpp" />
     <ClCompile Include="gridNeighbor.cpp" />
     <ClCompile Include="gridPoint.cpp" />
